--- a/SportShop/SportShop/Areas/Admin/Views/_ViewImports.cshtml
+++ b/SportShop/SportShop/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using SportShop
 @using SportShop.Models
 @using SportShop.ViewModels.CategoryVM
+@using SportShop.ViewModels.ProductVMs
+@using SportShop.ViewModels.DashboardVM
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
