--- a/SportShop/SportShop/Areas/Admin/Views/_ViewImports.cshtml
+++ b/SportShop/SportShop/Areas/Admin/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using SportShop.ViewModels.CategoryVM
 @using SportShop.ViewModels.ProductVMs
 @using SportShop.ViewModels.DashboardVM
+@using SportShop.ViewModels.SliderVms
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
