--- a/SportShop/SportShop/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/SportShop/SportShop/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -22,6 +22,25 @@
             </div>
         </div>
     </div>
+    <div class="col-md-6 col-lg-3">
+        <div class="card bg-info text-white shadow mb-4">
+            <div class="card-body">
+                <div class="d-flex justify-content-between align-items-center">
+                    <div>
+                        <h3>@Model.SliderCount</h3>
+                        <p class="mb-0">Cəmi Slider</p>
+                    </div>
+                    <div>
+                        <i class="fas fa-images fa-2x opacity-50"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="card-footer d-flex align-items-center justify-content-between bg-info border-top-0">
+                <a class="small text-white stretched-link" asp-controller="Slider" asp-action="Index">Ətraflı Bax</a>
+                <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div class="card shadow mb-4">
