--- a/SportShop/SportShop/Views/Shared/_Layout.cshtml
+++ b/SportShop/SportShop/Views/Shared/_Layout.cshtml
@@ -36,10 +36,10 @@
                 <div class="flex-fill">
                     <ul class="nav navbar-nav d-flex mx-lg-auto gap-2">
                         <li class="nav-item me-0">
-                            <a class="nav-link px-2" href="index.html">Home</a>
+                            <a class="nav-link px-2" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item me-0">
-                            <a class="nav-link px-2" href="shop.html">Shop</a>
+                            <a class="nav-link px-2" asp-controller="Shop" asp-action="Index">Shop</a>
                         </li>
                     </ul>
                 </div>
